--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
-pillow==10.4.0
+numpy==2.0.1
+opencv-python==4.10.0.84
 pypng==0.20220715.0
 python-telegram-bot==21.4
-pyzbar==0.1.9
 qrcode==7.4.2
 sniffio==1.3.1
 typing_extensions==4.12.2
